updated docs for new snapshot

--- a/gapi/allclasses-frame.html
+++ b/gapi/allclasses-frame.html
@@ -33,6 +33,8 @@ All Classes
 <BR>
 <A HREF="grails/plugin/formfields/FormFieldsTemplateService.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTemplateService</A>
 <BR>
+<A HREF="grails/plugin/formfields/PropertyPathAccessor.html" title="class in grails.plugin.formfields" target="classFrame">PropertyPathAccessor</A>
+<BR>
 
 	  
 </FONT></TD>
