--- a/gapi/grails/plugin/formfields/package-frame.html
+++ b/gapi/grails/plugin/formfields/package-frame.html
@@ -32,7 +32,7 @@ Interfaces</FONT>&nbsp;
 <TR>
 <TD NOWRAP><FONT size="+1" CLASS="FrameHeadingFont">
 Classes</FONT>&nbsp;
-<FONT CLASS="FrameItemFont"><BR><A HREF="BeanPropertyAccessorFactory.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorFactory</A><BR><A HREF="BeanPropertyAccessorImpl.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorImpl</A><BR><A HREF="FormFieldsTagLib.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTagLib</A><BR><A HREF="FormFieldsTemplateService.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTemplateService</A></FONT></TD>
+<FONT CLASS="FrameItemFont"><BR><A HREF="BeanPropertyAccessorFactory.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorFactory</A><BR><A HREF="BeanPropertyAccessorImpl.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorImpl</A><BR><A HREF="FormFieldsTagLib.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTagLib</A><BR><A HREF="FormFieldsTemplateService.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTemplateService</A><BR><A HREF="PropertyPathAccessor.html" title="class in grails.plugin.formfields" target="classFrame">PropertyPathAccessor</A></FONT></TD>
 </TR>
 </TABLE>
 
