--- a/gapi/grails/plugin/formfields/package-summary.html
+++ b/gapi/grails/plugin/formfields/package-summary.html
@@ -129,6 +129,11 @@ Package grails.plugin.formfields
         <TD></TD>
         </TR>
 
+        <TR BGCOLOR="white" CLASS="TableRowColor">
+        <TD WIDTH="15%"><B><A HREF="PropertyPathAccessor.html" title="class in grails/plugin/formfields">PropertyPathAccessor</A></B></TD>
+        <TD></TD>
+        </TR>
+
 </TABLE>
 &nbsp;
 <P>
