updated docs for 1.2

--- a/guide/introduction.html
+++ b/guide/introduction.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>1 Introduction 1.1</title>
+    <title>1 Introduction 1.2</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -78,7 +78,7 @@ function addJsClass() {
 
                     <p><strong>Authors:</strong> Rob Fletcher</p>
 
-                    <p><strong>Version:</strong> 1.1</p>
+                    <p><strong>Version:</strong> 1.2</p>
 
                     
                 </div>
@@ -96,7 +96,11 @@ The  <em class="italic">Fields plugin</em>  allows you to customize the renderin
 <li>Support inputs for property paths of arbitrary depth and with indexing.</li>
 <li>Enable other plugins to provide field rendering for special property types that gets picked up automatically (e.g. the  <em class="italic">Joda Time</em>  plugin can provide templates for the various date/time types).</li>
 <li>Support embedded properties of  <em class="italic">GORM</em>  domain classes.</li>
-</ul><p class="paragraph"/><h2>Changelog</h2><p class="paragraph"/><h3>Version 1.1</h3><p class="paragraph"/> <em class="italic">2012-03-11</em> : Minor enhancements and bug fixes.
+</ul><p class="paragraph"/><h2>Changelog</h2><p class="paragraph"/><h3>Version 1.2</h3><p class="paragraph"/> <em class="italic">2012-03-16</em> 
+<ul class="star">
+<li>Pass attributes from `f:field` to the rendered input using `input-` prefix.</li>
+<li>Optionally use entire property path for label key.</li>
+</ul><p class="paragraph"/><a href="https://github.com/robfletcher/grails-fields/issues?milestone=8&#38;state=closed" target="blank">Browse issues</a><p class="paragraph"/>Thanks to <a href="https://github.com/bluesliverx" target="blank">Brian Saville</a> and <a href="https://github.com/OverZealous" target="blank">OverZealous</a> for contributions.<p class="paragraph"/><h3>Version 1.1</h3><p class="paragraph"/> <em class="italic">2012-03-11</em> 
 <ul class="star">
 <li>Adds the  <em class="italic">prefix</em>  attribute.</li>
 <li>Support `widget:'textarea'` constraint.</li>
