--- a/gapi/allclasses-frame.html
+++ b/gapi/allclasses-frame.html
@@ -1,45 +1,27 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<HTML>
-<HEAD>
-<TITLE>
-All Classes
-</TITLE>
+<html>
+<head>
+<title>All Classes</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="groovy.ico" type="image/x-icon" rel="shortcut icon">
 <link href="groovy.ico" type="image/x-icon" rel="icon">
-<LINK REL ="stylesheet" TYPE="text/css" HREF="stylesheet.css" TITLE="Style">
+<link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style">
 
-</HEAD>
+</head>
+<body class="left">
+    <h1 class="bar">All Classes</h1>
+    <div class="indexContainer">
+        <ul>
+        <li><a href="grails/plugin/formfields/BeanPropertyAccessor.html" title="interface in grails.plugin.formfields" target="classFrame"><I>BeanPropertyAccessor</I></a></li>
+<li><a href="grails/plugin/formfields/BeanPropertyAccessorFactory.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorFactory</a></li>
+<li><a href="grails/plugin/formfields/BeanPropertyAccessorImpl.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorImpl</a></li>
+<li><a href="grails/plugin/formfields/DomainClassPropertyComparator.html" title="class in grails.plugin.formfields" target="classFrame">DomainClassPropertyComparator</a></li>
+<li><a href="DefaultPackage/FieldsGrailsPlugin.html" title="class in FieldsGrailsPlugin" target="classFrame">FieldsGrailsPlugin</a></li>
+<li><a href="grails/plugin/formfields/FormFieldsTagLib.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTagLib</a></li>
+<li><a href="grails/plugin/formfields/FormFieldsTemplateService.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTemplateService</a></li>
+<li><a href="grails/plugin/formfields/PropertyPathAccessor.html" title="class in grails.plugin.formfields" target="classFrame">PropertyPathAccessor</a></li>
 
-<BODY BGCOLOR="white">
-<FONT size="+1" CLASS="FrameHeadingFont">
-<B>All Classes</B></FONT>
-
-<BR>
-
-<TABLE BORDER="0" WIDTH="100%" SUMMARY="">
-<TR>
-<TD NOWRAP><FONT CLASS="FrameItemFont">
-<!--<A HREF="org/omg/CORBA/ARG_IN.html" title="interface in org.omg.CORBA" target="classFrame"><I>ARG_IN</I></A>-->
-<!--<BR>-->
-<A HREF="grails/plugin/formfields/BeanPropertyAccessor.html" title="interface in grails.plugin.formfields" target="classFrame"><I>BeanPropertyAccessor</I></A>
-<BR>
-<A HREF="grails/plugin/formfields/BeanPropertyAccessorFactory.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorFactory</A>
-<BR>
-<A HREF="grails/plugin/formfields/BeanPropertyAccessorImpl.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorImpl</A>
-<BR>
-<A HREF="DefaultPackage/FieldsGrailsPlugin.html" title="class in FieldsGrailsPlugin" target="classFrame">FieldsGrailsPlugin</A>
-<BR>
-<A HREF="grails/plugin/formfields/FormFieldsTagLib.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTagLib</A>
-<BR>
-<A HREF="grails/plugin/formfields/FormFieldsTemplateService.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTemplateService</A>
-<BR>
-<A HREF="grails/plugin/formfields/PropertyPathAccessor.html" title="class in grails.plugin.formfields" target="classFrame">PropertyPathAccessor</A>
-<BR>
-
-	  
-</FONT></TD>
-</TR>
-</TABLE>
-
-</BODY>
-</HTML>
+        </ul>
+    </div>
+</body>
+</html>
