--- a/gapi/grails/plugin/formfields/package-frame.html
+++ b/gapi/grails/plugin/formfields/package-frame.html
@@ -1,47 +1,46 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<HTML>
-<HEAD>
-<TITLE>
-grails.plugin.formfields
-</TITLE>
+<html>
+<head>
+    <title>grails.plugin.formfields</title>
+    
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="keywords" CONTENT="grails/plugin/formfields package">
 
+    <link href="groovy.ico" type="image/x-icon" rel="shortcut icon">
+    <link href="groovy.ico" type="image/x-icon" rel="icon">
+    <link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="Style">
+</head>
 
-<META NAME="keywords" CONTENT="grails/plugin/formfields package">
-
-<LINK REL ="stylesheet" TYPE="text/css" HREF="../../../stylesheet.css" TITLE="Style">
-
-</HEAD>
-
-<BODY BGCOLOR="white">
-<FONT size="+1" CLASS="FrameTitleFont">
-<A HREF="package-summary.html" target="classFrame">grails.plugin.formfields</A></FONT>
-
-
-
-<TABLE BORDER="0" WIDTH="100%" SUMMARY="">
-<TR>
-<TD NOWRAP><FONT size="+1" CLASS="FrameHeadingFont">
-Interfaces</FONT>&nbsp;
-<FONT CLASS="FrameItemFont"><BR><A HREF="BeanPropertyAccessor.html" title="interface in grails.plugin.formfields" target="classFrame"><I>BeanPropertyAccessor</I></A></FONT></TD>
-</TR>
-</TABLE>
+<body class="left">
+<div class="indexHeader">
+    <b><a href="package-summary.html" target="classFrame">grails.plugin.formfields</a></b>
+</div>
 
 
 
-<TABLE BORDER="0" WIDTH="100%" SUMMARY="">
-<TR>
-<TD NOWRAP><FONT size="+1" CLASS="FrameHeadingFont">
-Classes</FONT>&nbsp;
-<FONT CLASS="FrameItemFont"><BR><A HREF="BeanPropertyAccessorFactory.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorFactory</A><BR><A HREF="BeanPropertyAccessorImpl.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorImpl</A><BR><A HREF="FormFieldsTagLib.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTagLib</A><BR><A HREF="FormFieldsTemplateService.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTemplateService</A><BR><A HREF="PropertyPathAccessor.html" title="class in grails.plugin.formfields" target="classFrame">PropertyPathAccessor</A></FONT></TD>
-</TR>
-</TABLE>
+<div class="indexContainer">
+    <h2>Interfaces</h2>
+    <ul>
+        <li><a href="BeanPropertyAccessor.html" title="interface in grails.plugin.formfields" target="classFrame"><em>BeanPropertyAccessor</em></a></li>
+    </ul>
+</div>
 
 
+
+
+<div class="indexContainer">
+    <h2>Classes</h2>
+    <ul>
+        <li><a href="BeanPropertyAccessorFactory.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorFactory</a></li><li><a href="BeanPropertyAccessorImpl.html" title="class in grails.plugin.formfields" target="classFrame">BeanPropertyAccessorImpl</a></li><li><a href="DomainClassPropertyComparator.html" title="class in grails.plugin.formfields" target="classFrame">DomainClassPropertyComparator</a></li><li><a href="FormFieldsTagLib.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTagLib</a></li><li><a href="FormFieldsTemplateService.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTemplateService</a></li><li><a href="PropertyPathAccessor.html" title="class in grails.plugin.formfields" target="classFrame">PropertyPathAccessor</a></li>
+    </ul>
+</div>
 
 
 
 
 
 
-</BODY>
-</HTML>
+
+
+</body>
+</html>
