--- a/guide/introduction.html
+++ b/guide/introduction.html
@@ -99,7 +99,14 @@ The  <em class="italic">Fields plugin</em>  allows you to customize the renderin
 <li>Support inputs for property paths of arbitrary depth and with indexing.</li>
 <li>Enable other plugins to provide field rendering for special property types that gets picked up automatically (e.g. the  <em class="italic">Joda Time</em>  plugin can provide templates for the various date/time types).</li>
 <li>Support embedded properties of  <em class="italic">GORM</em>  domain classes.</li>
-</ul><p class="paragraph"/><h2>Changelog</h2><p class="paragraph"/><h3>Version 1.3</h3><p class="paragraph"/> <em class="italic">2012-07-31</em> 
+</ul><p class="paragraph"/><h2>Changelog</h2><p class="paragraph"/><h3>Version 1.4</h3>
+<ul class="star">
+<li>Upgraded plugin to work with Grails 2.3.x (Issue #122)</li>
+<li>Fixed missing property exception (Issue #134)</li>
+<li>Fixed encoding in tag libraries (Issue #137)</li>
+<li>Configuring caching in dev mode (Issue #139)</li>
+<li>byte and Byte arrays types now look for files in byteArray folders (general for all array types) (Issue #144)</li>
+</ul><p class="paragraph"/><a href="https://github.com/grails-fields-plugin/grails-fields/issues?q=is%3Aissue+milestone%3A1.4+is%3Aclosed" target="blank">Browse issues</a><p class="paragraph"/><h3>Version 1.3</h3><p class="paragraph"/> <em class="italic">2012-07-31</em> 
 <ul class="star">
 <li>Adds the  <em class="italic">f:display</em>  tag.</li>
 <li>Supports overriding templates by property type or by default in individual controllers and actions.</li>
