Updated documentation to 1.5

--- a/gapi/grails/plugin/formfields/package-summary.html
+++ b/gapi/grails/plugin/formfields/package-summary.html
@@ -131,6 +131,22 @@ function windowTitle()
                         </tr>
 <tr class="altColor">
                             <td class="colOne">
+                                <strong><a href="FormFieldsTagLib.BeanAndPrefix.html" title="class in grails/plugin/formfields">
+                                    FormFieldsTagLib.BeanAndPrefix
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
+                                <strong><a href="FormFieldsTagLib.BeanAndPrefixStack.html" title="class in grails/plugin/formfields">
+                                    FormFieldsTagLib.BeanAndPrefixStack
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
                                 <strong><a href="FormFieldsTemplateService.html" title="class in grails/plugin/formfields">
                                     FormFieldsTemplateService
                                 </a></strong>
