--- a/gapi/allclasses-frame.html
+++ b/gapi/allclasses-frame.html
@@ -18,6 +18,8 @@
 <li><a href="grails/plugin/formfields/DomainClassPropertyComparator.html" title="class in grails.plugin.formfields" target="classFrame">DomainClassPropertyComparator</a></li>
 <li><a href="DefaultPackage/FieldsGrailsPlugin.html" title="class in FieldsGrailsPlugin" target="classFrame">FieldsGrailsPlugin</a></li>
 <li><a href="grails/plugin/formfields/FormFieldsTagLib.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTagLib</a></li>
+<li><a href="grails/plugin/formfields/FormFieldsTagLib.BeanAndPrefix.html" title="class in grails.plugin.formfields.FormFieldsTagLib" target="classFrame">FormFieldsTagLib.BeanAndPrefix</a></li>
+<li><a href="grails/plugin/formfields/FormFieldsTagLib.BeanAndPrefixStack.html" title="class in grails.plugin.formfields.FormFieldsTagLib" target="classFrame">FormFieldsTagLib.BeanAndPrefixStack</a></li>
 <li><a href="grails/plugin/formfields/FormFieldsTemplateService.html" title="class in grails.plugin.formfields" target="classFrame">FormFieldsTemplateService</a></li>
 <li><a href="grails/plugin/formfields/PropertyPathAccessor.html" title="class in grails.plugin.formfields" target="classFrame">PropertyPathAccessor</a></li>
 
