Added breaking changes to release notes

--- a/guide/introduction.html
+++ b/guide/introduction.html
@@ -103,7 +103,9 @@ The  <em class="italic">Fields plugin</em>  allows you to customize the renderin
 <h3>Version 1.5</h3><p class="paragraph"/> <em class="italic">2015_04_26</em> 
 <ul class="star">
 <li>Changelog will be completed shortly.</li>
-</ul><p class="paragraph"/><a href="https://github.com/grails-fields-plugin/grails-fields/issues?q=milestone%3A1.5+is%3Aclosed" target="blank">Browse issues</a><p class="paragraph"/><h3>Version 1.4</h3>
+</ul><p class="paragraph"/><blockquote class="warning">
+See <a href="../guide/single.html#usage" class="guide">Usage</a> and <a href="../guide/single.html#customizingFieldRendering" class="guide">Customizing Field Rendering</a> for breaking changes.
+</blockquote><p class="paragraph"/><a href="https://github.com/grails-fields-plugin/grails-fields/issues?q=milestone%3A1.5+is%3Aclosed" target="blank">Browse issues</a><p class="paragraph"/><h3>Version 1.4</h3>
 <ul class="star">
 <li>Upgraded plugin to work with Grails 2.3.x (Issue #122)</li>
 <li>Fixed missing property exception (Issue #134)</li>
