Updating docs for Travis build: https://travis-ci.org/grails-fields-plugin/grails-fields/builds/225965168

--- a/snapshot/guide/index.html
+++ b/snapshot/guide/index.html
@@ -133,6 +133,19 @@
 <h2 id="_changelog">Changelog</h2>
 <div class="sectionbody">
 <div class="sect2">
+<h3 id="_version_2_1_4">Version 2.1.4</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Upgrade to Grails 3.2.8</p>
+</li>
+<li>
+<p>Convert documentation to Asciidoc</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="_version_1_5">Version 1.5</h3>
 <div class="paragraph">
 <p><em>2015_04_26</em></p>
