--- a/snapshot/guide/index.html
+++ b/snapshot/guide/index.html
@@ -146,6 +146,16 @@
 </div>
 </div>
 <div class="sect2">
+<h3 id="_version_2_0">Version 2.0</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Redesign for Grails 3.0</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="_version_1_5">Version 1.5</h3>
 <div class="paragraph">
 <p><em>2015_04_26</em></p>
@@ -153,7 +163,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Changelog will be completed shortly.</p>
+<p>See <a href="https://github.com/grails-fields-plugin/grails-fields/issues?q=milestone%3A1.5+is%3Aclosed">Browse issues</a></p>
 </li>
 </ul>
 </div>
@@ -168,19 +178,6 @@ See <a href="#usage">Usage</a> and <a href="#customizingFieldRendering">Customiz
 </td>
 </tr>
 </table>
-</div>
-<div class="paragraph">
-<p><a href="https://github.com/grails-fields-plugin/grails-fields/issues?q=milestone%3A1.5+is%3Aclosed">Browse issues</a></p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_version_2_0">Version 2.0</h3>
-<div class="ulist">
-<ul>
-<li>
-<p>Redesign for Grails 3.0</p>
-</li>
-</ul>
 </div>
 </div>
 <div class="sect2">
