Updating docs for Travis build: https://travis-ci.org/grails-fields-plugin/grails-fields/builds/230664384

--- a/snapshot/guide/customizingFieldRendering.html
+++ b/snapshot/guide/customizingFieldRendering.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>3 Customizing Field Rendering 2.1.6-SNAPSHOT</title>
+    <title>3 Customizing Field Rendering 2.2.0-SNAPSHOT</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -84,7 +84,7 @@ function addJsClass() {
                 <div class="project">
                     <h1>3 Customizing Field Rendering</h1>
 
-                    <p><strong>Version:</strong> 2.1.6-SNAPSHOT</p>
+                    <p><strong>Version:</strong> 2.2.0-SNAPSHOT</p>
                 </div>
 
                 
@@ -542,7 +542,7 @@ Using <code>f:field</code> you can pass extra arguments (e.g. <code>optionKey</c
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>persistentProperty</strong></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">GrailsDomainClassProperty</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="http://grails.github.io/scaffolding/latest/api/org/grails/scaffolding/model/property/DomainProperty.html">DomainProperty</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">The persistent property object if the bean is a domain object.</p></td>
 </tr>
 <tr>
