--- a/snapshot/guide/introduction.html
+++ b/snapshot/guide/introduction.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>1 Introduction 2.1.6-SNAPSHOT</title>
+    <title>1 Introduction 2.2.0-SNAPSHOT</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -82,7 +82,7 @@ function addJsClass() {
                 <div class="project">
                     <h1>1 Introduction</h1>
 
-                    <p><strong>Version:</strong> 2.1.6-SNAPSHOT</p>
+                    <p><strong>Version:</strong> 2.2.0-SNAPSHOT</p>
                 </div>
 
                 
@@ -126,6 +126,16 @@ function addJsClass() {
 <div class="sect1">
 <h2 id="_changelog">Changelog</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_version_2_2_0">Version 2.2.0</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Conversion to the Mapping Context API. Usages of the GrailsDomainClass and GrailsDomainClassProperty classes have been removed. If you extend a template that relies on those classes, they have been replaced with <a href="http://gorm.grails.org/latest/hibernate/api/org/grails/datastore/mapping/model/PersistentEntity.html">PersistentEntity</a> and <a href="http://grails.github.io/scaffolding/latest/api/org/grails/scaffolding/model/property/DomainProperty.html">DomainProperty</a> respectively.</p>
+</li>
+</ul>
+</div>
+</div>
 <div class="sect2">
 <h3 id="_version_2_1_4">Version 2.1.4</h3>
 <div class="ulist">
