--- a/snapshot/groovydoc/grails/plugin/formfields/package-summary.html
+++ b/snapshot/groovydoc/grails/plugin/formfields/package-summary.html
@@ -22,7 +22,7 @@
 <html>
 <head>
 
-<title>grails.plugin.formfields (fields 2.1.6-SNAPSHOT API)</title>
+<title>grails.plugin.formfields (fields 2.2.0-SNAPSHOT API)</title>
 <meta name="keywords" content="grails.plugin.formfields package">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel ="stylesheet" TYPE="text/css" HREF="../../../stylesheet.css" title="Style">
@@ -31,7 +31,7 @@
 <script type="text/javascript">
 function windowTitle()
 {
-    parent.document.title="grails.plugin.formfields (fields 2.1.6-SNAPSHOT API)";
+    parent.document.title="grails.plugin.formfields (fields 2.2.0-SNAPSHOT API)";
 }
 </script>
 <noscript>
@@ -134,6 +134,14 @@ function windowTitle()
                             <td class="colOne">
                                 <strong><a href="BeanPropertyAccessorImpl.html" title="class in grails/plugin/formfields">
                                     BeanPropertyAccessorImpl
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
+                                <strong><a href="DelegatingBeanPropertyAccessorImpl.html" title="class in grails/plugin/formfields">
+                                    DelegatingBeanPropertyAccessorImpl
                                 </a></strong>
                             </td>
                             <td></td>
