Updating docs for Travis build: https://travis-ci.org/grails-fields-plugin/grails-fields/builds/277134432

--- a/snapshot/guide/index.html
+++ b/snapshot/guide/index.html
@@ -139,6 +139,9 @@
 <li>
 <p>Conversion to the Mapping Context API. Usages of the GrailsDomainClass and GrailsDomainClassProperty classes have been removed. If you extend a template that relies on those classes, they have been replaced with <a href="http://gorm.grails.org/latest/hibernate/api/org/grails/datastore/mapping/model/PersistentEntity.html">PersistentEntity</a> and <a href="http://grails.github.io/scaffolding/latest/api/org/grails/scaffolding/model/property/DomainProperty.html">DomainProperty</a> respectively.</p>
 </li>
+<li>
+<p>Conversion of constraints to a common implementation between grails.validation and grails.gorm.validation. See <a href="http://grails.github.io/scaffolding/latest/api/org/grails/scaffolding/model/property/Constrained.html">Constrained</a>.</p>
+</li>
 </ul>
 </div>
 </div>
