--- a/snapshot/guide/index.html
+++ b/snapshot/guide/index.html
@@ -67,7 +67,7 @@
                     <h1>Grails Fields Plugin</h1>
                     <p></p>
                     <p>Customizable form-field rendering based on overrideable GSP template</p>
-                    <p><strong>Version:</strong> 2.2.0-SNAPSHOT</p>
+                    <p><strong>Version:</strong> 2.2.1.BUILD-SNAPSHOT</p>
 
                 </div>
                 
