Updating docs for Travis build: https://travis-ci.org/grails-fields-plugin/grails-fields/builds/326413197

--- a/snapshot/guide/introduction.html
+++ b/snapshot/guide/introduction.html
@@ -149,6 +149,9 @@ function addJsClass() {
 <li>
 <p>Convert documentation to Asciidoc</p>
 </li>
+<li>
+<p>Add support for themes</p>
+</li>
 </ul>
 </div>
 </div>
