--- a/snapshot/guide/index.html
+++ b/snapshot/guide/index.html
@@ -497,6 +497,19 @@ grails.plugin.fields.widget = <span class="string"><span class="delimiter">&quot
 </ul>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_localized_numbers">Localized numbers</h3>
+<div class="paragraph">
+<p>All numbers are now rendered localized. This means that when using <code>Locale.ENGLISH</code> the number 1000.50 is represented
+as <code>1,000.50</code> but with <code>Locale.GERMAN</code> is represented as <code>1.000,50</code>. To use the old behavior (for backwards compatibility)
+without localizing the numbers, configure the following in <code>Config.groovy</code>:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="groovy">grails.plugin.fields.localizeNumbers = <span class="predefined-constant">false</span></code></pre>
+</div>
+</div>
+</div>
 
 <a name="3. Customizing Field Rendering"><!-- Legacy link --></a>
 <h1 id="customizingFieldRendering">3 Customizing Field Rendering</h1>
