Missing bugfix in changelog

--- a/2.2.6/guide/introduction.html
+++ b/2.2.6/guide/introduction.html
@@ -131,6 +131,9 @@ function addJsClass() {
 <div class="ulist">
 <ul>
 <li>
+<p>Bug-fix: Fixed issue <a href="https://github.com/grails-fields-plugin/grails-fields/issues/263">#263</a> where <code>DelegatingBeanPropertyAccessorImpl</code> was not memoized correctly in <code>FormFieldsTemplateService</code></p>
+</li>
+<li>
 <p>Improvement: Documentation of <code>maxProperties</code> on <code>&lt;f:table/&gt;</code></p>
 </li>
 <li>
