Updating docs for Travis build: https://travis-ci.org/grails-fields-plugin/grails-fields/builds/354779788

--- a/snapshot/guide/index.html
+++ b/snapshot/guide/index.html
@@ -65,7 +65,7 @@
                     <h1>Grails Fields Plugin</h1>
                     <p></p>
                     <p>Customizable form-field rendering based on overrideable GSP template</p>
-                    <p><strong>Version:</strong> 2.2.8.BUILD-SNAPSHOT</p>
+                    <p><strong>Version:</strong> 2.2.7</p>
 
                 </div>
                 
