--- a/snapshot/guide/index.html
+++ b/snapshot/guide/index.html
@@ -65,7 +65,7 @@
                     <h1>Grails Fields Plugin</h1>
                     <p></p>
                     <p>Customizable form-field rendering based on overrideable GSP template</p>
-                    <p><strong>Version:</strong> 2.2.8</p>
+                    <p><strong>Version:</strong> 2.2.9.BUILD-SNAPSHOT</p>
 
                 </div>
                 
