Updating docs for Travis build: https://travis-ci.org/grails-fields-plugin/grails-fields/builds/383164946

--- a/snapshot/guide/index.html
+++ b/snapshot/guide/index.html
@@ -141,6 +141,13 @@
 <h2 id="_changelog">Changelog</h2>
 <div class="sectionbody">
 <div class="sect2">
+<h3 id="_version_2_2_9_build_snapshot">Version 2.2.9.BUILD-SNAPSHOT</h3>
+<div class="paragraph">
+<p>(no changes yet)
+<a href="https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.8&#8230;&#8203;v2.2.9">GitHub diff</a></p>
+</div>
+</div>
+<div class="sect2">
 <h3 id="_version_2_2_8">Version 2.2.8</h3>
 <div class="ulist">
 <ul>
@@ -151,7 +158,8 @@
 <p>BugFix: Table Tag does not render references correctly! (Issue <a href="https://github.com/grails-fields-plugin/grails-fields/issues/269">#269</a>)</p>
 </li>
 <li>
-<p>BugFix: Fix XSS vulnerability when rendering beans (Issue <a href="https://github.com/grails-fields-plugin/grails-fields/issue/278">#278</a>)</p>
+<p>BugFix: Fix XSS vulnerability when rendering beans (Issue <a href="https://github.com/grails-fields-plugin/grails-fields/issue/278">#278</a>)
+<a href="https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.7&#8230;&#8203;v2.2.8">GitHub diff</a></p>
 </li>
 </ul>
 </div>
@@ -164,7 +172,8 @@
 <p>BugFix: The fix for #257 did not work as described, but now it does.</p>
 </li>
 <li>
-<p>Improvement: Documentation has been improved with more examples for the various tags.</p>
+<p>Improvement: Documentation has been improved with more examples for the various tags.
+<a href="https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.6&#8230;&#8203;v2.2.7">GitHub diff</a></p>
 </li>
 </ul>
 </div>
