--- a/snapshot/guide/customizingFieldRendering.html
+++ b/snapshot/guide/customizingFieldRendering.html
@@ -2,7 +2,16 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>3 Customizing Field Rendering 2.2.9.BUILD-SNAPSHOT</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script src="/cdn-cgi/apps/head/3cOPSgo5Omz84ycX7CvigfX4cpw.js"></script><script async src="https://www.googletagmanager.com/gtag/js?id=UA-82213539-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-82213539-2');
+    </script>
+    <title>3 Customizing Field Rendering 3.0.0.BUILD-SNAPSHOT</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -81,7 +90,7 @@ function addJsClass() {
                 <div class="project">
                     <h1>3 Customizing Field Rendering</h1>
 
-                    <p><strong>Version:</strong> 2.2.9.BUILD-SNAPSHOT</p>
+                    <p><strong>Version:</strong> 3.0.0.BUILD-SNAPSHOT</p>
                 </div>
 
                 
@@ -476,6 +485,28 @@ to <code>grails-app/conf/application.yml</code> to change the default templates 
 </div>
 <div class="paragraph">
 <p>During template development it is usually recommended to disable template caching in order to allow the plugin to recognize new/renamed/moved templates without restarting the application. See the "Performance" section of the guide for the exact settings.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_see_template_seach_path">See Template Seach Path</h3>
+<div class="paragraph">
+<p>The plugin logs which locations it is checking for templates as debug log. You can enable this by defining a logger in logback.groovy</p>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>logger('grails.plugin.formfields.FormFieldsTemplateService', DEBUG,['STDOUT'])</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>The can disable the caching in application.yml using:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>grails:
+    plugin:
+        fields:
+            disableLookupCache: true</pre>
+</div>
 </div>
 </div>
 <div class="sect2">
